# philox

./: 2-6-8ff-01  Cargo.toml  LICENSE.md  readme.md
.cargo/: config
src/: lib.rs  test.rs
tests/: speed.rs
