[project]
name = "philox"
version = "0.0.0"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2018"
keywords = ["random", "rng"]
categories = ["algorithms", "science"]
license = "MIT"
repository = "https://github.com/dominikwerder/philox"

[lib]
doctest = false

[dependencies]
generic-array = "0.12"
typenum = "1.10"
